{
    "name": "PlayerController",
    "maps": [
        {
            "name": "Player",
            "id": "82ae8c64-703d-4221-96db-0cb1c7872a11",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "3b5423e9-4885-43b4-9e63-9f38a81c4799",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Walk",
                    "type": "Value",
                    "id": "13ce0467-2ac8-4960-a2c3-1a703a03cc89",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "fc2c9420-022d-4fe0-b4b4-936f0649b7b2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Glide",
                    "type": "Button",
                    "id": "3e315f1d-c598-438c-8287-85f8aad190c4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6a532b28-55e3-45dc-a469-3304477fd7c3",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "77b960d0-7c39-4215-b12b-e77d13f3cf7b",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "f0742654-c7f5-4657-93de-3295e38c08a6",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "ea88aede-928e-4f83-9cff-915731426cad",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "6b45e9fe-54a3-4063-9fb7-f2a32359d725",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e98418bd-6b97-47f2-8725-dc2ae18d4375",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Glide",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}